#30 added getFondSource in core
