# apps/core/src/routes/v1/media/index.ts
@@ -1,6 +1,7 @@
 import { controllerWrapper } from '@/core/utils';
 import { Router } from 'express';
 import {
+  getFontSource,
   getPreSignedDownloadUrl,
   getPreSignedUploadUrl,
 } from './media.controller';
@@ -16,5 +17,7 @@ router.get(
   '/pre-signed-download-url/:key',
   ...controllerWrapper(getPreSignedDownloadUrl)
 );
+
+router.get('/font/source', ...controllerWrapper(getFontSource));
 
 export default router;
